Corrected href anchor.

--- a/app/team.html
+++ b/app/team.html
@@ -78,7 +78,7 @@
 
               <fieldset id="addLink" class="last-child">
                 <div class="form-group">
-                  <label class="custom-label col-sm-2 control-label"><a href="#">+ Add a team member</a></label>
+                  <label class="custom-label col-sm-2 control-label"><a href="addMember.html">+ Add a team member</a></label>
                 </div>
               </fieldset>
 
@@ -89,7 +89,29 @@
                     <br>
                     ROLE
                   </label>
-                  <a href="addMember.html"><button id="submit" class="btn edit">Save Changes</button></a>
+                  <a href="addMember.html"><button id="submit" class="btn edit">EDIT</button></a>
+                </div>
+              </fieldset>
+
+              <fieldset class="last-child">
+                <div class="form-group">
+                  <label class="custom-label col-sm-2 control-label">
+                    Thomas
+                    <br>
+                    ROLE
+                  </label>
+                  <a href="addMember.html"><button id="submit" class="btn edit">EDIT</button></a>
+                </div>
+              </fieldset>
+
+              <fieldset class="last-child">
+                <div class="form-group">
+                  <label class="custom-label col-sm-2 control-label">
+                    Julian Rodriguez
+                    <br>
+                    ROLE
+                  </label>
+                  <a href="addMember.html"><button id="submit" class="btn edit">EDIT</button></a>
                 </div>
               </fieldset>
 
