Created registration Sucsses page and properties pages.

--- a/app/registrationSucsses.html
+++ b/app/registrationSucsses.html
@@ -1,23 +1,55 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="description" content="Bootstrap Admin App + jQuery">
+  <meta name="keywords" content="app, responsive, jquery, bootstrap, dashboard, admin">
+  <title>Angle - Bootstrap Admin Template</title>
+  <!-- =============== VENDOR STYLES ===============-->
+  <!-- FONT AWESOME-->
+  <link rel="stylesheet" href="../vendor/fontawesome/css/font-awesome.min.css">
+  <!-- SIMPLE LINE ICONS-->
+  <link rel="stylesheet" href="../vendor/simple-line-icons/css/simple-line-icons.css">
+  <!-- ANIMATE.CSS-->
+  <link rel="stylesheet" href="../vendor/animate.css/animate.min.css">
+  <!-- WHIRL (spinners)-->
+  <link rel="stylesheet" href="../vendor/whirl/dist/whirl.css">
+  <!-- =============== PAGE VENDOR STYLES ===============-->
+  <!-- =============== BOOTSTRAP STYLES ===============-->
+  <link rel="stylesheet" href="css/bootstrap.css" id="bscss">
+  <!-- =============== APP STYLES ===============-->
+  <link rel="stylesheet" href="css/app.css" id="maincss">
 
-    <!--build:css css/styles.min.css-->
-    <link href="css/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- inject:css -->
-    <link rel="stylesheet" href="css/main.css">
-    <!-- endinject -->
-    <!--endbuild-->
-  </head>
+  <!-- inject:css -->
+  <link rel="stylesheet" href="css/main.css">
+  <!-- endinject -->
+  <!--endbuild-->
+</head>
   <body>
     <header>
       <div id="icon">
 
       </div>
     </header>
+
+    <div class="wrapper" id="login">
+
+      <div class="login_modal registration-successful">
+
+        <div class="panel panel-dark panel-flat">
+
+          <div class="state-body">
+            <h1>Thanks for signing up !</h1>
+            <p>We sent you a confirmation email! Please click on it to get started!</p>
+            <button type="submit" class="btn btn-primary mt-lg">Sign in</button>
+          </div>
+
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
