--- a/app/properties.html
+++ b/app/properties.html
@@ -58,7 +58,7 @@
                  </li>
 
                  <li class=" ">
-                    <a href="property.html" title="Documentation">
+                    <a href="properties.html" title="Documentation">
                        <em class="icon-location-pin"></em>
                        <span data-localize="sidebar.nav.PROPERTIES">Properties</span>
                     </a>
