Edited main colors to fit brand and created logic to calculate area of polygons with various units in real time.

--- a/app/login.html
+++ b/app/login.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <div id="company-icon">
-
+      <img src="img/uav-iq-logo.png" alt="" />
     </div>
 
     <div class="wrapper" id="login">
@@ -53,6 +53,7 @@
                       <div class="pull-right"><a href="recover.html" class="text-muted">Forgot your password?</a>
                       </div>
                    </div>
+                   <div class="g-recaptcha" data-sitekey="6Lfw2CcTAAAAAMUgBk7J4Qg3si_bz6NWFuQJigbN"></div>
                    <button type="submit" class="btn btn-block btn-primary mt-lg">Login</button>
                 </form>
                 <p class="pt-lg text-center">Need to Signup?</p><a href="register.html" class="btn btn-block btn-default">Register Now</a>
@@ -61,6 +62,7 @@
           <!-- END panel-->
        </div>
     </div>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
   </body>
 </html>
