--- a/app/account.html
+++ b/app/account.html
@@ -35,105 +35,18 @@
          <!-- START Top Navbar-->
          <nav role="navigation" class="navbar topnavbar">
             <!-- START navbar header-->
-            <div class="navbar-header">
-               <a href="#/" class="navbar-brand">
-                  <div class="brand-logo">
-                     <img src="img/logo.png" alt="App Logo" class="img-responsive">
-                  </div>
-                  <div class="brand-logo-collapsed">
-                     <img src="img/logo-single.png" alt="App Logo" class="img-responsive">
-                  </div>
-               </a>
-            </div>
+
             <!-- END navbar header-->
             <!-- START Nav wrapper-->
             <div class="nav-wrapper">
                <!-- START Right Navbar-->
                <ul class="nav navbar-nav navbar-right">
-                  <!-- Search icon-->
                   <li>
-                     <a href="#" data-search-open="">
-                        <em class="icon-magnifier"></em>
-                     </a>
+                     <a href="#" data-search-open="">FAQ</a>
                   </li>
-                  <!-- Fullscreen (only desktops)-->
-                  <li class="visible-lg">
-                     <a href="#" data-toggle-fullscreen="">
-                        <em class="fa fa-expand"></em>
-                     </a>
-                  </li>
-                  <!-- START Alert menu-->
-                  <li class="dropdown dropdown-list">
-                     <a href="#" data-toggle="dropdown">
-                        <em class="icon-bell"></em>
-                        <div class="label label-danger">11</div>
-                     </a>
-                     <!-- START Dropdown menu-->
-                     <ul class="dropdown-menu animated flipInX">
-                        <li>
-                           <!-- START list group-->
-                           <div class="list-group">
-                              <!-- list item-->
-                              <a href="#" class="list-group-item">
-                                 <div class="media-box">
-                                    <div class="pull-left">
-                                       <em class="fa fa-twitter fa-2x text-info"></em>
-                                    </div>
-                                    <div class="media-box-body clearfix">
-                                       <p class="m0">New followers</p>
-                                       <p class="m0 text-muted">
-                                          <small>1 new follower</small>
-                                       </p>
-                                    </div>
-                                 </div>
-                              </a>
-                              <!-- list item-->
-                              <a href="#" class="list-group-item">
-                                 <div class="media-box">
-                                    <div class="pull-left">
-                                       <em class="fa fa-envelope fa-2x text-warning"></em>
-                                    </div>
-                                    <div class="media-box-body clearfix">
-                                       <p class="m0">New e-mails</p>
-                                       <p class="m0 text-muted">
-                                          <small>You have 10 new emails</small>
-                                       </p>
-                                    </div>
-                                 </div>
-                              </a>
-                              <!-- list item-->
-                              <a href="#" class="list-group-item">
-                                 <div class="media-box">
-                                    <div class="pull-left">
-                                       <em class="fa fa-tasks fa-2x text-success"></em>
-                                    </div>
-                                    <div class="media-box-body clearfix">
-                                       <p class="m0">Pending Tasks</p>
-                                       <p class="m0 text-muted">
-                                          <small>11 pending task</small>
-                                       </p>
-                                    </div>
-                                 </div>
-                              </a>
-                              <!-- last list item-->
-                              <a href="#" class="list-group-item">
-                                 <small>More notifications</small>
-                                 <span class="label label-danger pull-right">14</span>
-                              </a>
-                           </div>
-                           <!-- END list group-->
-                        </li>
-                     </ul>
-                     <!-- END Dropdown menu-->
-                  </li>
-                  <!-- END Alert menu-->
-                  <!-- START Offsidebar button-->
                   <li>
-                     <a href="#" data-toggle-state="offsidebar-open" data-no-persist="true">
-                        <em class="icon-notebook"></em>
-                     </a>
+                     <a href="#" data-search-open="">Contact Us</a>
                   </li>
-                  <!-- END Offsidebar menu-->
                </ul>
                <!-- END Right Navbar-->
             </div>
@@ -257,6 +170,10 @@
           </div>
         </div>
       </section>
+
+      <div id="company-icon-lower">
+        <img src="img/uav-iq-logo.png" alt="" />
+      </div>
     </div>
 
   </body>
