--- a/app/map.html
+++ b/app/map.html
@@ -20,6 +20,7 @@
     <!-- =============== BOOTSTRAP STYLES ===============-->
     <link rel="stylesheet" href="css/bootstrap.css" id="bscss">
     <!-- =============== APP STYLES ===============-->
+    <link rel="stylesheet" href="../vendor/jquery-ui/themes/smoothness/jquery-ui.min.css">
     <link rel="stylesheet" href="css/app.css" id="maincss">
 
     <!-- inject:css -->
@@ -43,34 +44,15 @@
          <div class="aside-inner">
             <nav data-sidebar-anyclick-close="" class="">
                <!-- START sidebar nav-->
-               <!-- <ul class="nav">
-                 <li class=" ">
-                    <a href="account.html" title="Documentation">
-                       <em class="icon-user"></em>
-                       <span data-localize="sidebar.nav.USERSETTINGS">Personal Settings</span>
-                    </a>
-                 </li>
-
-                 <li class=" ">
-                    <a href="team.html" title="Documentation">
-                       <em class="icon-people"></em>
-                       <span data-localize="sidebar.nav.TEAM">Team</span>
-                    </a>
-                 </li>
-
-                 <li class=" ">
-                    <a href="properties.html" title="Documentation">
-                       <em class="icon-location-pin"></em>
-                       <span data-localize="sidebar.nav.PROPERTIES">Properties</span>
-                    </a>
-                 </li>
-
-               </ul> -->
 
                <form id="property" action="test.php" method="post">
                  <div class=" panel-default">
                     <div class="panel-heading">Stacked form</div>
                     <div class="panel-body">
+                        <div class="form-group">
+                           <label>Property Name</label>
+                           <input type="text" name="propertyName" placeholder="" class="form-control">
+                        </div>
                         <div class="form-group">
                           <label>Area measurements</label>
                           <select id="areas" name="account" class="form-control m-b">
@@ -78,17 +60,10 @@
                             <option value="ha">Hectares</option>
                             <option value="m">Miles</option>
                             <option value="acre">Acres</option>
+                            <option value="cuerda">Cuerdas</option>
                           </select>
                         </div>
-                        <div class="form-group">
-                           <label>Property Name</label>
-                           <input type="text" name="propertyName" placeholder="" class="form-control">
-                        </div>
-                        <div class="form-group last">
-                           <label>Type of crop</label>
-                           <input type="text" name="cropType" placeholder="" class="form-control">
-                        </div>
-                        <legend>Plots</legend>
+                        <legend id="drawContaner">Plots</legend>
                         <div id="plots">
                         </div>
 
@@ -109,11 +84,14 @@
             <input id='basic' type='radio' name='rtoggle' value='satellite-streets' checked='checked'>
             <label for='streets-satellite'>Hybrid</label>
             <input id='streets' type='radio' name='rtoggle' value='streets'>
-            <label for='streets'>streets</label>
+            <label for='streets'>Streets</label>
             <input id='satellite' type='radio' name='rtoggle' value='satellite'>
-            <label for='satellite'>satellite</label>
+            <label for='satellite'>Satellite</label>
           </div>
       </section>
+      <div id="company-icon-lower">
+        <img src="img/uav-iq-logo.png" alt="" />
+      </div>
     </div>
 
     <!-- =============== VENDOR SCRIPTS ===============-->
@@ -139,6 +117,8 @@
     <script src="../vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
     <!-- =============== PAGE VENDOR SCRIPTS ===============-->
     <!-- =============== APP SCRIPTS ===============-->
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
     <script src='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js'></script>
     <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-draw/v0.2.3/leaflet.draw.js'></script>
     <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-geodesy/v0.1.0/leaflet-geodesy.js'></script>
