Compleated tasks fromasana list.

--- a/app/map.html
+++ b/app/map.html
@@ -56,11 +56,12 @@
                         <div class="form-group">
                           <label>Area measurements</label>
                           <select id="areas" name="account" class="form-control m-b">
-                            <option value="km">Kilometers</option>
-                            <option value="ha">Hectares</option>
-                            <option value="m">Miles</option>
                             <option value="acre">Acres</option>
+                            <option value="ha">Hectares</option>
                             <option value="cuerda">Cuerdas</option>
+                            <option value="me">meters²</option>
+                            <option value="km">km²</option>
+\                           <option value="m">mi²</option>
                           </select>
                         </div>
 
@@ -68,7 +69,7 @@
                         <div id="plots">
                         </div>
 
-                        <button type="submit" class="btn btn-sm btn-defaul">Submit</button>
+                        <button type="submit" class="btn btn-sm btn-defaul">Save</button>
                     </div>
                  </div>
                </form>
