--- a/app/account.html
+++ b/app/account.html
@@ -35,17 +35,37 @@
          <!-- START Top Navbar-->
          <nav role="navigation" class="navbar topnavbar">
             <!-- START navbar header-->
-
+            <div class="navbar-header">
+               <a href="#/" class="navbar-brand">
+                  <div class="brand-logo">
+                     <img src="img/uav-iq-logo-horizontal.png" alt="App Logo" class="img-responsive">
+                  </div>
+                  <div class="brand-logo-collapsed">
+                     <img src="img/uav-iq-logo-horizontal.png" alt="App Logo" class="img-responsive">
+                  </div>
+               </a>
+            </div>
             <!-- END navbar header-->
             <!-- START Nav wrapper-->
             <div class="nav-wrapper">
+               <!-- START Left navbar-->
+               <ul class="nav navbar-nav">
+                  <!-- START User avatar toggle-->
+                  <li>
+                     <!-- Button used to collapse the left sidebar. Only visible on tablet and desktops-->
+                     <a id="user-block-toggle" href="#user-block" data-toggle="collapse">
+                        <em class="fa fa-share-square-o"></em> Return to property list
+                     </a>
+                  </li>
+                  <!-- END User avatar toggle-->
+               </ul>
+               <!-- END Left navbar-->
                <!-- START Right Navbar-->
                <ul class="nav navbar-nav navbar-right">
-                  <li>
-                     <a href="#" data-search-open="">FAQ</a>
-                  </li>
-                  <li>
-                     <a href="#" data-search-open="">Contact Us</a>
+                  <li class="visible-lg">
+                     <a target="_blank" id="mailto">
+                        <em class="fa fa-envelope"></em> Contact us
+                     </a>
                   </li>
                </ul>
                <!-- END Right Navbar-->
@@ -170,10 +190,6 @@
           </div>
         </div>
       </section>
-
-      <div id="company-icon-lower">
-        <img src="img/uav-iq-logo.png" alt="" />
-      </div>
     </div>
 
   </body>
