--- a/app/registration.html
+++ b/app/registration.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <div id="company-icon">
-
+      <img src="img/uav-iq-logo.png" alt="" />
     </div>
 
     <div class="wrapper" id="login">
