--- a/app/team.html
+++ b/app/team.html
@@ -61,9 +61,9 @@
                <!-- END Left navbar-->
                <!-- START Right Navbar-->
                <ul class="nav navbar-nav navbar-right">
-                  <li class="visible-lg">
+                  <li>
                      <a target="_blank" id="mailto">
-                        <em class="fa fa-envelope"></em> Contact us
+                       <em class="fa fa-sign-out"></em> Log Out
                      </a>
                   </li>
                </ul>
