--- a/app/map.html
+++ b/app/map.html
@@ -106,7 +106,7 @@
                         </div>
                         <div class="form-group">
                           <label>Area measurements</label>
-                          <select id="areas" name="account" class="form-control m-b">
+                          <select id="areas" name="measurement" class="form-control m-b">
                             <option value="acre">Acres</option>
                             <option value="ha">Hectares</option>
                             <option value="cuerda">Cuerdas</option>
