--- a/app/properties.html
+++ b/app/properties.html
@@ -54,7 +54,7 @@
                   <li>
                      <!-- Button used to collapse the left sidebar. Only visible on tablet and desktops-->
                      <a id="user-block-toggle" href="#user-block" data-toggle="collapse">
-                        <em class="fa fa-share-square-o"></em> Return to property list
+                       <em class="fa fa-sign-out"></em> Log Out
                      </a>
                   </li>
                   <!-- END User avatar toggle-->
@@ -62,7 +62,7 @@
                <!-- END Left navbar-->
                <!-- START Right Navbar-->
                <ul class="nav navbar-nav navbar-right">
-                  <li class="visible-lg">
+                  <li>
                      <a target="_blank" id="mailto">
                         <em class="fa fa-envelope"></em> Contact us
                      </a>
