made changes to acomodate new mobile designs.

--- a/UAV-IQ-Marketing/app/index.html
+++ b/UAV-IQ-Marketing/app/index.html
@@ -5,10 +5,10 @@
     <title></title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="/UAV-IQ-Marketing/app/css/main.css" media="screen" title="no title">
+    <link rel="stylesheet" href="css/main.css" media="screen" title="no title">
     <script src="https://use.fontawesome.com/7d2063661e.js"></script>
   </head>
-  <body>
+  <body class="home">
     <nav class="navbar navbar-static-top navbar-dark bg-inverse">
       <a class="navbar-brand" href="#"><img src="img/logo.png" alt="" /></a>
       <ul class="nav navbar-nav">
@@ -24,7 +24,7 @@
       </ul>
     </nav>
 
-    <div class="jumbotron" style="background-image: url('img/TV-Colchagua.png');">
+    <div class="jumbotron" style="background-image: url('img/TV-Colchagua.png'); background-size: 160%;">
       <div class="container">
         <h1 class="display-3">Wondering How To Make Remote Sensing Work For You?</h1>
         <p>Our mobile enterprise software turns your drone-acquired precision agriculture data into actionable information. Mitigate loss, optimize resources and improve your yields.</p>
@@ -32,6 +32,8 @@
           <a class="btn btn-primary btn-lg" href="#" role="button">SIGN UP »</a>
           <span>to create a free demo account</span>
         </p>
+
+        <img class="banner" src="img/Home-Page-banner.png" alt="" />
       </div>
     </div>
 
@@ -39,17 +41,15 @@
       <div id="industries" class="row">
         <h1 class="section-header">Use Aerial Imagery for Better Farm Management</h1>
         <h3 class="section-sub-header">PICK YOUR INDUSTRY:</h3>
-        <div class="col-sm-4">
-          <img src="img/Home-Page_Wine Industry.png" alt=""/>
-          <h2>Wine Industry</h2>
+        <div class="col-sm-12 col-md-6">
+          <a href="#">
+            <img src="img/Home-Page_Wine Industry.png" alt=""/>
+            <h2>Wine Industry</h2>
+          </a>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-12 col-md-6">
           <img src="img/Home-Page_Avocado.png" alt=""/>
           <h2>Fruit & Nuts Production</h2>
-        </div>
-        <div class="col-sm-4">
-          <img src="img/Home-Page_Wine Industry.png" alt=""/>
-          <h2>Agriculture Consultants</h2>
         </div>
 
         <i class="fa fa-angle-double-down"></i>
@@ -61,8 +61,8 @@
         <h1 class="section-header">Identify Trends, Examine Localized Issues…</h1>
         <h3 class="section-sub-header">IMPROVE YOUR RESULTS</h3>
         <div>
-          <img class="background" src="img/BG_zoom_level.png" alt=""/>
           <img class="asset" src="img/3_zoom_levels.png" alt=""/>
+          <img class="second-asset" src="img/zoom-mobile.png" alt="" />
         </div>
       </div>
     </div>
@@ -72,7 +72,7 @@
         <h1 class="section-header">Identify Trends, Examine Localized Issues…</h1>
         <h3 class="section-sub-header">IMPROVE YOUR RESULTS</h3>
         <div class="wrap">
-          <div class="col-sm-4 col-lg-5 left">
+          <div class="col-sm-12 col-lg-5 left">
             <ul>
               <li>Intuitive displays and precise ground details allow you to rapidly assess your fields <img src="img/Oval.png" alt="" /></li>
               <li>Compare images from different time periods or view different contrasts from the same flight <img src="img/Oval.png" alt="" /></li>
@@ -80,10 +80,11 @@
               <li>Take geolocalized field notes and pictures <img src="img/Oval.png" alt="" /></li>
             </ul>
           </div>
-          <div class="col-sm-4 col-lg-2">
+          <div class="col-sm-12 col-lg-2">
             <img class="phone" src="img/phone-proto.png" alt=""/>
+            <img class="tablet" src="img/Bitmap 2.png" alt=""/>
           </div>
-          <div class="col-sm-4 col-lg-5 right">
+          <div class="col-sm-12 col-lg-5 right">
             <ul>
               <li>Agriculture data is not only used once - index and store your data for future use <img src="img/Oval.png" alt="" /></li>
               <li>Offline data collection for operating in remote fields <img src="img/Oval.png" alt="" /></li>
