--- a/UAV-IQ-Marketing/app/index.html
+++ b/UAV-IQ-Marketing/app/index.html
@@ -13,18 +13,22 @@
       <a class="navbar-brand" href="#"><img src="img/logo.png" alt="" /></a>
       <ul class="nav navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="datacollection.html">Data Collection</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="wineflight.html">Wine Flight</a>
         </li>
       </ul>
+
+      <div class="stack">
+        <button class="fa fa-reorder" type="button" name="button"></button>
+      </div>
     </nav>
 
-    <div class="jumbotron" style="background-image: url('img/TV-Colchagua.png'); background-size: 160%;">
+    <div class="jumbotron" style="background-image: url('img/TV-Colchagua.png'); background-size: 185%;">
       <div class="container">
         <h1 class="display-3">Wondering How To Make Remote Sensing Work For You?</h1>
         <p>Our mobile enterprise software turns your drone-acquired precision agriculture data into actionable information. Mitigate loss, optimize resources and improve your yields.</p>
@@ -119,7 +123,7 @@
       <div id="options" class="row">
         <div class="col-sm-6 option">
           <div class="">
-            <img class="image" src="img/Drone_ebee_white.png" alt="" />
+            <img class="image" src="img/drone-large.png" alt="" />
             <p>Want to start using the tools but need an imagery provider?</p>
             <button type="button" name="button">Book a flight now</button>
           </div>
@@ -158,6 +162,11 @@
             <label for="">Location</label>
             <textarea name="message"></textarea>
           </div>
+
+          <div class="col-sm-12">
+            <button type="button" name="button">SEND</button>
+            <div class="g-recaptcha" data-sitekey="6Lfw2CcTAAAAAMUgBk7J4Qg3si_bz6NWFuQJigbN"></div>
+          </div>
         </form>
       </div>
     </div>
@@ -187,7 +196,9 @@
         <img class="col-sm-4 col-lg-4" src="img/1476695958_linkedin_circle_black.png" alt="" />
       </div>
     </div>
-
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="js/main.js" type="text/javascript"></script>
   </body>
 </html>
