--- a/UAV-IQ-Marketing/app/wineflight.html
+++ b/UAV-IQ-Marketing/app/wineflight.html
@@ -13,19 +13,26 @@
       <a class="navbar-brand" href="#"><img src="img/logo.png" alt="" /></a>
       <ul class="nav navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="datacollection.html">Data Collection</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="wineflight.html">Wine Flight</a>
         </li>
       </ul>
+
+      <div class="stack">
+        <button class="fa fa-reorder" type="button" name="button"></button>
+      </div>
     </nav>
 
     <div class="jumbotron" style="background-image: url('img/BG WineFlight banner.png');  background-size: 100%;">
       <div class="container">
+        <div class="image-container">
+          <img src="img/WineFligth-logo.png" alt="" />
+        </div>
         <h1 class="display-3">Maximize Your Vineyard’s Potential</h1>
         <p>Precision agriculture software that enables you to identify and manage variability to increase your bottom-line.</p>
         <p class="button">
@@ -40,25 +47,25 @@
         <h1 class="section-header">Actionable Data Delivered to all  of Your Team Members’ Devices. Collaborate & Make Confident, Accurate Decisions.</h1>
 
         <div class="col-sm-12 col-md-3">
-          <img src="img/Laptop icon.png" alt=""/>
+          <img src="img/Laptop icon-norm.png" alt=""/>
           <h2>Access Your Data from Anywhere</h2>
           <p>Analyze your data in the office. Ground truth your findings and take action in the field.</p>
         </div>
 
         <div class="col-sm-12 col-md-3">
-          <img src="img/Bitmap 3.png" alt=""/>
+          <img src="img/Bitmap 3-norm.png" alt=""/>
           <h2>Analyze the Evolution of Your Field</h2>
           <p>Notice the changes at different phenological stages or seasons and see the results of your field management.</p>
         </div>
 
         <div class="col-sm-12 col-md-3">
-          <img src="img/cycle.png" alt=""/>
+          <img src="img/cycle-norm.png" alt=""/>
           <h2>Better Collaborate with Your Team </h2>
           <p>Guide and task your team to areas that require attention and easily report and share observations.</p>
         </div>
 
         <div class="col-sm-12 col-md-3">
-          <img src="img/Bitmap 4.png" alt=""/>
+          <img src="img/Bitmap 4-norm.png" alt=""/>
           <h2>Stop the Guess Work. Get Accurate Information </h2>
           <p>Monitor change, manage quality and get better yield estimations thanks to accurate imagery and precise stats</p>
         </div>
@@ -70,20 +77,20 @@
       <div id="work" class="row">
         <h1 class="section-header">How Does It Work?</h1>
 
-        <div class="col-sm-12 col-md-3">
+        <div class="col-sm-12 col-md-4">
           <img src="img/Drone_ebee_white.png" alt=""/>
           <h2>Collect data of your field with your drone or book a flight with one of our certified drone operators.</h2>
           <p>Learn more our data collection services >></p>
         </div>
 
-        <div class="col-sm-12 col-md-3">
+        <div class="col-sm-12 col-md-4">
           <img src="img/cloud-computing.png" alt=""/>
           <h2>The collected data is sent to the cloud for rapid processing</h2>
           <p>Learn more our data processing services >></p>
         </div>
 
-        <div class="col-sm-12 col-md-3">
-          <img src="img/transsfere.png" alt=""/>
+        <div class="col-sm-12 col-md-4">
+          <img src="img/transsfere-2.png" alt=""/>
           <h2>We deliver high quality health maps & additional imagery products to all your devices</h2>
           <p>Discover our imagery products >></p>
         </div>
@@ -91,33 +98,91 @@
     </div>
 
     <div class="container-fluid">
-      <div id="actionalble_data" class="row">
-        <h1 class="section-header">Actionable Data Delivered to all  of Your Team Members’ Devices. Collaborate & Make Confident, Accurate Decisions.</h1>
+      <div id="best-wine" class="row">
+        <h1 class="section-header">Ensure Your Best Grapes Make Your Best Wine</h1>
 
-        <div class="col-sm-12 col-md-3">
-          <img src="img/Laptop icon.png" alt=""/>
-          <h2>Access Your Data from Anywhere</h2>
-          <p>Analyze your data in the office. Ground truth your findings and take action in the field.</p>
+        <div class="col-sm-12 col-md-6 col-lg-6 ipad">
+          <img src="img/Bitmap 2.png" alt=""/>
         </div>
 
-        <div class="col-sm-12 col-md-3">
-          <img src="img/Bitmap 3.png" alt=""/>
-          <h2>Analyze the Evolution of Your Field</h2>
-          <p>Notice the changes at different phenological stages or seasons and see the results of your field management.</p>
+        <div class="col-sm-12 col-md-6 col-lg-6 left">
+          <ul>
+            <li>Take advantage of your terroir by determining quality zones <img src="img/Oval.png" alt=""></li>
+            <li>Ask for inspections and grape sampling <img src="img/Oval.png" alt=""></li>
+            <li>Detect and manage hydric stress <img src="img/Oval.png" alt=""></li>
+            <li>Design and implement a detailed harvest plan <img src="img/Oval.png" alt=""></li>
+          </ul>
         </div>
 
-        <div class="col-sm-12 col-md-3">
-          <img src="img/cycle.png" alt=""/>
-          <h2>Better Collaborate with Your Team </h2>
-          <p>Guide and task your team to areas that require attention and easily report and share observations.</p>
+      </div>
+    </div>
+
+    <div class="container-fluid">
+      <div id="best-practice" class="row">
+        <h1 class="section-header">Adopt Good Farming Practices</h1>
+
+        <div class="col-sm-12 col-md-6 col-lg-6 ipad">
+          <img src="img/Bitmap 5.png" alt=""/>
         </div>
 
-        <div class="col-sm-12 col-md-3">
-          <img src="img/Bitmap 4.png" alt=""/>
-          <h2>Stop the Guess Work. Get Accurate Information </h2>
-          <p>Monitor change, manage quality and get better yield estimations thanks to accurate imagery and precise stats</p>
+        <div class="col-sm-12 col-md-6 col-lg-6 left">
+          <ul>
+            <li>Implement variable rate cultivation to optimize use of inputs <img src="img/Oval.png" alt=""></li>
+            <li>Optimize water ressources <img src="img/Oval.png" alt=""></li>
+            <li>Identify pests and disease, assess severity of damage <img src="img/Oval.png" alt=""></li>
+            <li>Detect problems before they are visible to the naked eyes <img src="img/Oval.png" alt=""></li>
+            <li>Qualitatively and quantitatively evaluate your vineyard's health over time <img src="img/Oval.png" alt=""></li>
+          </ul>
         </div>
 
+      </div>
+    </div>
+
+    <div class="container-fluid">
+      <div id="advanteges" class="row">
+        <h1 class="section-header">The WineFlight Advantages For</h1>
+
+        <div class="col-sm-12 col-md-4">
+          <img src="img/Consultant PIC.png" alt=""/>
+          <h2>Consultant</h2>
+          <p>Better prepare your visit to your clients</p>
+          <p>Request inspections and sampling</p>
+          <p>Share pictures, notes with your clients</p>
+        </div>
+
+        <div class="col-sm-12 col-md-4">
+          <img src="img/Manager Pic.png" alt=""/>
+          <h2>Vineyard Manager</h2>
+          <p>Make team communication easier</p>
+          <p>Focus your effort where it's most needed</p>
+          <p>Assess effectiveness of expensive solutions</p>
+        </div>
+
+        <div class="col-sm-12 col-md-4">
+          <img src="img/WineMaker PIC.png" alt=""/>
+          <h2>Winemaker</h2>
+          <p>Track varietals & vineyards</p>
+          <p>Assess blending options & influence final quality</p>
+          <p>Buy with confidence</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid">
+      <div id="start-servises" class="row">
+        <div class="col-sm-12 col-md-6">
+          <h2>Want to start using the tools but need an imagery provider?</h2>
+          <p class="button">
+            <a class="btn btn-primary btn-lg" href="#" role="button">Book a flight now</a>
+          </p>
+        </div>
+
+        <div class="col-sm-12 col-md-6">
+          <h2>Already have an imagery provider and are interested in using the WineFlight Precision Viticulture?</h2>
+          <p class="button">
+            <a class="btn btn-primary btn-lg" href="#" role="button">Utilize your data in the App</a>
+          </p>
+        </div>
       </div>
     </div>
 
@@ -147,6 +212,9 @@
       </div>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="js/main.js" type="text/javascript"></script>
   </body>
 </html>
