updated header styles to make them more logical for mobile.

--- a/UAV-IQ-Marketing/app/datacollection.html
+++ b/UAV-IQ-Marketing/app/datacollection.html
@@ -67,7 +67,7 @@
 
     <div class="container-fluid">
       <div class="work row">
-        <h1 class="section-header">How Does It Work?</h1>
+        <h1 class="section-header">Why Drones ?</h1>
         <div class="col-sm-12 col-md-4">
           <img src="img/light.png" alt=""/>
           <h2>Schedule field surveys where and when you need it - as often as you need it</h2>
