--- a/UAV-IQ-Marketing/app/index.html
+++ b/UAV-IQ-Marketing/app/index.html
@@ -33,8 +33,8 @@
         <h1 class="display-3">Wondering How To Make Remote Sensing Work For You?</h1>
         <p>Our mobile enterprise software turns your drone-acquired precision agriculture data into actionable information. Mitigate loss, optimize resources and improve your yields.</p>
         <p class="button">
-          <a class="btn btn-primary btn-lg" href="#" role="button">SIGN UP »</a>
-          <span>to create a free demo account</span>
+          <a class="btn btn-primary btn-lg" href="#" role="button">TALK TO US</a>
+          <span>to create a FREE account</span>
         </p>
 
         <img class="banner" src="img/Home-Page-banner.png" alt="" />
@@ -49,11 +49,13 @@
           <a href="#">
             <img src="img/Home-Page_Wine Industry.png" alt=""/>
             <h2>Wine Industry</h2>
+            <p>Learn more >></p>
           </a>
         </div>
         <div class="col-sm-12 col-md-6">
           <img src="img/Home-Page_Avocado.png" alt=""/>
           <h2>Fruit & Nuts Production</h2>
+          <p>Learn more >></p>
         </div>
 
         <i class="fa fa-angle-double-down"></i>
@@ -73,8 +75,9 @@
 
     <div class="container-fluid">
       <div id="observe" class="row">
-        <h1 class="section-header">Identify Trends, Examine Localized Issues…</h1>
-        <h3 class="section-sub-header">IMPROVE YOUR RESULTS</h3>
+        <h1 class="section-header">Observe - Orient - Decide - Act</h1>
+        <h3 class="section-sub-header">Collaborate with your team.
+          <br>Unlock the value of your data.</h3>
         <div class="wrap">
           <div class="col-sm-12 col-lg-5 left">
             <ul>
