--- a/UAV-IQ-Marketing/app/wineflight.html
+++ b/UAV-IQ-Marketing/app/wineflight.html
@@ -22,6 +22,10 @@
         <li class="nav-item">
           <a class="nav-link" href="wineflight.html">Wine Flight</a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="our_pruducts.html">Our Products</a>
+        </li>
       </ul>
 
       <div class="stack">
