--- a/UAV-IQ-Marketing/app/datacollection.html
+++ b/UAV-IQ-Marketing/app/datacollection.html
@@ -10,6 +10,7 @@
   </head>
   <body class="datacollection">
     <nav class="navbar navbar-static-top navbar-dark bg-inverse">
+      <div class="droneOperators"><p>Are you a drone operator or a farmer flying your own drone? <button type="button" name="button">GET STARTED NOW</button></p></div>
       <a class="navbar-brand" href="#"><img src="img/logo.png" alt="" /></a>
       <ul class="nav navbar-nav">
         <li class="nav-item active">
@@ -178,8 +179,8 @@
           </div>
 
           <div class="col-sm-12">
-            <button type="button" name="button">SEND</button>
             <div class="g-recaptcha" data-sitekey="6Lfw2CcTAAAAAMUgBk7J4Qg3si_bz6NWFuQJigbN"></div>
+            <button type="button" name="button">SEND</button>
           </div>
         </form>
       </div>
