--- a/UAV-IQ-Marketing/app/index.html
+++ b/UAV-IQ-Marketing/app/index.html
@@ -10,7 +10,8 @@
   </head>
   <body class="home">
     <nav class="navbar navbar-static-top navbar-dark bg-inverse">
-      <a class="navbar-brand" href="#"><img src="img/logo.png" alt="" /></a>
+      <div class="droneOperators"><p>Are you a drone operator or a farmer flying your own drone? <button type="button" name="button">GET STARTED NOW</button></p></div>
+      <a class="navbar-brand" href="#"><img src="img/uav-iq-precision-agriculture-logo-horizontal_white.png" alt="" /></a>
       <ul class="nav navbar-nav">
         <li class="nav-item active">
           <a class="nav-link" href="index.html">Home</a>
@@ -32,8 +33,8 @@
       </div>
     </nav>
 
-    <div class="jumbotron" style="background-image: url('img/TV-Colchagua.png'); background-size: 185%;">
-      <div class="container">
+    <div class="jumbotron" style="background-image: url('img/TV-Colchagua.png');">
+      <div class="container col-sm-12 col-md-12 col-lg-7">
         <h1 class="display-3">Wondering How To Make Remote Sensing Work For You?</h1>
         <p>Our mobile enterprise software turns your drone-acquired precision agriculture data into actionable information. Mitigate loss, optimize resources and improve your yields.</p>
         <p class="button">
@@ -42,6 +43,9 @@
         </p>
 
         <img class="banner" src="img/Home-Page-banner.png" alt="" />
+      </div>
+      <div class="ipad col-sm-12 col-md-12 col-lg-5">
+        <img src="img/Home-Page-banner.png" alt="" />
       </div>
     </div>
 
@@ -171,8 +175,8 @@
           </div>
 
           <div class="col-sm-12">
-            <button type="button" name="button">SEND</button>
             <div class="g-recaptcha" data-sitekey="6Lfw2CcTAAAAAMUgBk7J4Qg3si_bz6NWFuQJigbN"></div>
+            <button type="button" name="button">SEND</button>
           </div>
         </form>
       </div>
