made several changes to the css.

--- a/UAV-IQ-Marketing/app/datacollection.html
+++ b/UAV-IQ-Marketing/app/datacollection.html
@@ -73,24 +73,39 @@
     <div class="container-fluid">
       <div class="work row">
         <h1 class="section-header">Why Drones ?</h1>
-        <div class="col-sm-12 col-md-4">
+        <div class="col-sm-12 col-md-2">
           <img src="img/light.png" alt=""/>
           <h2>Schedule field surveys where and when you need it - as often as you need it</h2>
         </div>
 
-        <div class="col-sm-12 col-md-4">
+        <div class="col-sm-12 col-md-2">
           <img src="img/lens.png" alt=""/>
           <h2>Resolution as high as 2 cm / pixel</h2>
           <p>(10x better than manned aviation)</p>
         </div>
 
-        <div class="col-sm-12 col-md-4">
+        <div class="col-sm-12 col-md-2">
           <img src="img/24.png" alt=""/>
           <h2>Rapid processing and delivery of results</h2>
         </div>
+
+        <div class="col-sm-12 col-md-2">
+          <img src="img/icon sunset.png" alt=""/>
+          <h2>Flights can be flown at optimal times of day to avoid problematic sun angles</h2>
+        </div>
+
+        <div class="col-sm-12 col-md-2">
+          <img src="img/icon drone cloud.png" alt=""/>
+          <h2>Fly under cloud decks to collect data on days when manned aircraft or satellites can't</h2>
+        </div>
+
+        <div class="col-sm-12 col-md-2">
+          <img src="img/rising-graph.png" alt=""/>
+          <h2>Drone-collected data can be utilized to build 3-D models for topographic study</h2>
+        </div>
       </div>
 
-      <div class="work row">
+      <!-- <div class="work row">
         <div class="col-sm-12 col-md-4">
           <img src="img/icon sunset.png" alt=""/>
           <h2>Flights can be flown at optimal times of day to avoid problematic sun angles</h2>
@@ -105,7 +120,7 @@
           <img src="img/rising-graph.png" alt=""/>
           <h2>Drone-collected data can be utilized to build 3-D models for topographic study</h2>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <div class="container-fluid">
