--- a/UAV-IQ-Marketing/app/index.html
+++ b/UAV-IQ-Marketing/app/index.html
@@ -53,14 +53,14 @@
       <div id="industries" class="row">
         <h1 class="section-header">Use Aerial Imagery for Better Farm Management</h1>
         <h3 class="section-sub-header">PICK YOUR INDUSTRY:</h3>
-        <div class="col-sm-12 col-md-6">
+        <div class="col-sm-12 col-md-4 col-md-offset-2">
           <a href="#">
             <img src="img/Home-Page_Wine Industry.png" alt=""/>
             <h2>Wine Industry</h2>
             <p>Learn more >></p>
           </a>
         </div>
-        <div class="col-sm-12 col-md-6">
+        <div class="col-sm-12 col-md-4">
           <img src="img/Home-Page_Avocado.png" alt=""/>
           <h2>Fruit & Nuts Production</h2>
           <p>Learn more >></p>
