--- a/UAV-IQ-Marketing/app/wineflight.html
+++ b/UAV-IQ-Marketing/app/wineflight.html
@@ -11,7 +11,7 @@
   <body class="wineflight">
     <nav class="navbar navbar-static-top navbar-dark bg-inverse">
       <div class="droneOperators"><p>Are you a drone operator or a farmer flying your own drone? <button type="button" name="button">GET STARTED NOW</button></p></div>
-      <a class="navbar-brand" href="#"><img src="img/logo.png" alt="" /></a>
+      <a class="navbar-brand" href="#"><img src="img/uav-iq-precision-agriculture-logo-horizontal_white.png" alt="" /></a>
       <ul class="nav navbar-nav">
         <li class="nav-item active">
           <a class="nav-link" href="index.html">Home</a>
