chnage image size.

--- a/UAV-IQ-Marketing/app/our_pruducts.html
+++ b/UAV-IQ-Marketing/app/our_pruducts.html
@@ -56,7 +56,7 @@
         <h1 class="section-header">Actionable Data Delivered to all  of Your Team Members’ Devices. Collaborate & Make Confident, Accurate Decisions.</h1>
         <div class="">
           <div class="col-sm-12 col-md-6">
-            <img src="img/polygon side to side.png" alt=""/>
+            <img src="img/polygon side to side without area size.png" alt=""/>
             <h2>Crop Health Assessment (NDVI or other indexes by request)</h2>
             <p>(NDVI or other indexes by request)</p>
             <p>Precise assesment, row by row, plant by plant.</p>
