changed behaveros for nav bar and also adjusted button sizes for the jumbo trons and across the board.

--- a/UAV-IQ-Marketing/app/index.html
+++ b/UAV-IQ-Marketing/app/index.html
@@ -62,7 +62,7 @@
         </div>
         <div class="col-sm-12 col-md-4">
           <img src="img/Home-Page_Avocado.png" alt=""/>
-          <h2>Fruit & Nuts Production</h2>
+          <h2>Fruit & Nut Production</h2>
           <p>Learn more >></p>
         </div>
 
