corrected html markup errors as well as nav changes.

--- a/UAV-IQ-Marketing/app/index.html
+++ b/UAV-IQ-Marketing/app/index.html
@@ -33,7 +33,7 @@
       </div>
     </nav>
 
-    <div class="jumbotron" style="background-image: url('img/TV-Colchagua.png');">
+    <div class="jumbotron" style="background-image: url('img/TV-Colchagua.jpg');">
       <div class="container col-sm-12 col-md-12 col-lg-7">
         <h1 class="display-3">Wondering How To Make Remote Sensing Work For You?</h1>
         <p>Our mobile enterprise software turns your drone-acquired precision agriculture data into actionable information. Mitigate loss, optimize resources and improve your yields.</p>
@@ -61,9 +61,11 @@
           </a>
         </div>
         <div class="col-sm-12 col-md-4">
-          <img src="img/Home-Page_Avocado.png" alt=""/>
-          <h2>Fruit & Nut Production</h2>
-          <p>Learn more >></p>
+          <a href="#">
+            <img src="img/Home-Page_Avocado.png" alt=""/>
+            <h2>Fruit & Nut Production</h2>
+            <p>Learn more >></p>
+          </a>
         </div>
 
         <i class="fa fa-angle-double-down"></i>
