--- a/UAV-IQ-Marketing/app/our_pruducts.html
+++ b/UAV-IQ-Marketing/app/our_pruducts.html
@@ -136,9 +136,13 @@
     </div>
 
     <div class="container-fluid">
-      <div id="best-practice" class="row">
-        <h1 class="section-header">Tools and Data to Help Your Team From Planting to Harvest</h1>
-
+      <div id="advance-research" class="row">
+        <div class="col-sm-12">
+          <h1 class="section-header">Advanced Research Capabilities</h1>
+          <h2>UAV-IQ also offers expertise to clients and partners who are conducting agricultural research. </h2>
+          <p>By leveraging its experience in database strategy, the company can support small to medium sized research projects on its existing infrastructure and it can design, implement and support infrastructure dedicated to large-scale projects.</p>
+          <p>Fully licensed by the FAA, the company offers the ability to conduct research flights 12 months a year through its operations in both hemispheres and can incorporate additional sensor types and data sets, both historic and newly acquired.</p>
+        </div>
       </div>
     </div>
 
