Created 'drone Operator' page as well as further refinments to spacinf on all pages.

--- a/UAV-IQ-Marketing/app/wineflight.html
+++ b/UAV-IQ-Marketing/app/wineflight.html
@@ -26,6 +26,12 @@
         <li class="nav-item">
           <a class="nav-link" href="our_pruducts.html">Our Products</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="instafarm.html">Instafarm</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="droneOperators.html">Drone Operators</a>
+        </li>
       </ul>
 
       <div class="stack">
