--- a/UAV-IQ-Marketing/app/datacollection.html
+++ b/UAV-IQ-Marketing/app/datacollection.html
@@ -22,9 +22,14 @@
         <li class="nav-item">
           <a class="nav-link" href="wineflight.html">Wine Flight</a>
         </li>
-
         <li class="nav-item">
           <a class="nav-link" href="our_pruducts.html">Our Products</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="instafarm.html">Instafarm</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="droneOperators.html">Drone Operators</a>
         </li>
       </ul>
 
