--- a/UAV-IQ-Marketing/app/our_pruducts.html
+++ b/UAV-IQ-Marketing/app/our_pruducts.html
@@ -11,7 +11,7 @@
   <body class="ourProducts">
     <nav class="navbar navbar-static-top navbar-dark bg-inverse">
       <div class="droneOperators"><p>Are you a drone operator or a farmer flying your own drone? <button type="button" name="button">GET STARTED NOW</button></p></div>
-      <a class="navbar-brand" href="#"><img src="img/logo.png" alt="" /></a>
+      <a class="navbar-brand" href="#"><img src="img/uav-iq-precision-agriculture-logo-horizontal_white.png" alt="" /></a>
       <ul class="nav navbar-nav">
         <li class="nav-item active">
           <a class="nav-link" href="index.html">Home</a>
@@ -22,9 +22,14 @@
         <li class="nav-item">
           <a class="nav-link" href="wineflight.html">Wine Flight</a>
         </li>
-
         <li class="nav-item">
           <a class="nav-link" href="our_pruducts.html">Our Products</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="instafarm.html">Instafarm</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="droneOperators.html">Drone Operators</a>
         </li>
       </ul>
 
