made cahnges based on notes on slack.

--- a/UAV-IQ-Marketing/app/wineflight.html
+++ b/UAV-IQ-Marketing/app/wineflight.html
@@ -20,14 +20,14 @@
           <a class="nav-link" href="datacollection.html">Data Collection</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="wineflight.html">Wine Flight</a>
+          <a class="nav-link" href="#">Enterprise software</a>
+          <ul>
+           <li><a class="nav-link" href="wineflight.html">Wine Flight</a></li>
+           <li><a class="nav-link" href="instafarm.html">Instafarm</a></li>
+          </ul>
         </li>
-
         <li class="nav-item">
           <a class="nav-link" href="our_pruducts.html">Our Products</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="instafarm.html">Instafarm</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="droneOperators.html">Drone Operators</a>
