--- a/UAV-IQ-Marketing/app/our_pruducts.html
+++ b/UAV-IQ-Marketing/app/our_pruducts.html
@@ -20,13 +20,14 @@
           <a class="nav-link" href="datacollection.html">Data Collection</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="wineflight.html">Wine Flight</a>
+          <a class="nav-link" href="#">Enterprise software</a>
+          <ul>
+           <li><a class="nav-link" href="wineflight.html">Wine Flight</a></li>
+           <li><a class="nav-link" href="instafarm.html">Instafarm</a></li>
+          </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="our_pruducts.html">Our Products</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="instafarm.html">Instafarm</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="droneOperators.html">Drone Operators</a>
@@ -63,7 +64,6 @@
           <div class="col-sm-12 col-md-6">
             <img src="img/polygon side to side without area size.png" alt=""/>
             <h2>Crop Health Assessment (NDVI or other indexes by request)</h2>
-            <p>(NDVI or other indexes by request)</p>
             <p>Precise assesment, row by row, plant by plant.</p>
             <p>Detect stress caused by pests, irrigation issues, nutrition deficiencies.</p>
             <p>Identify and monitor movement of zonal boundaries</p>
