made changes on the headers weights and also changed the Products page.

--- a/UAV-IQ-Marketing/app/wineflight.html
+++ b/UAV-IQ-Marketing/app/wineflight.html
@@ -47,7 +47,7 @@
         <h1 class="display-3">Maximize Your Vineyard’s Potential</h1>
         <p>Precision agriculture software that enables you to identify and manage variability to increase your bottom-line.</p>
         <p class="button">
-          <a class="btn btn-primary btn-lg" href="#" role="button">SIGN UP »</a>
+          <a class="btn btn-primary btn-lg" href="#" role="button">Talk to us</a>
           <span>to create a free demo account</span>
         </p>
         <div class="app col-sm-3 col-md-3 col-lg-4">
