--- a/UAV-IQ-Marketing/app/our_pruducts.html
+++ b/UAV-IQ-Marketing/app/our_pruducts.html
@@ -40,21 +40,19 @@
     </nav>
 
     <div class="jumbotron" style="background-image: url('img/BG_Our_Products.png');">
-      <div class="container">
-        <div class="image-container">
-          <img src="img/ InstaFarm.png" alt="" />
-        </div>
-        <h1 class="display-3">From Data to Better Yields</h1>
-        <p>Enterprise software to make the most of your field knowledge and remote sensing data. *Observe, Orient, Decide, Act</p>
-        <p class="button">
-          <a class="btn btn-primary btn-lg" href="#" role="button">SIGN UP »</a>
-          <span>to create a free demo account</span>
-        </p>
-        <div class="app col-sm-3 col-md-3 col-lg-4">
-          <img class="col-sm-12 col-lg-6" src="img/App Store.png" alt="" />
-          <img class="col-sm-12 col-lg-6" src="img/google-play-badge.png" alt="" />
+      <div class="container col-sm-12 col-md-7 col-lg-7">
+        <div class="subcontainer">
+          <h1 class="display-3">Products and services</h1>
+          <p>Highly informative imagery products ready for immediate use - without a learning curve</p>
         </div>
       </div>
+
+      <div class="image col-sm-12 col-md-5 col-lg-5">
+        <div class="subcontainer">
+          <img src="img/Product Page_layers banner.png" alt="">
+        </div>
+      </div>
+
     </div>
 
     <div class="container-fluid">
