made changes on section padding.:

--- a/UAV-IQ-Marketing/app/our_pruducts.html
+++ b/UAV-IQ-Marketing/app/our_pruducts.html
@@ -61,7 +61,8 @@
         <div class="">
           <div class="col-sm-12 col-md-6">
             <img src="img/polygon side to side without area size.png" alt=""/>
-            <h2>Crop Health Assessment (NDVI or other indexes by request)</h2>
+            <h2>Crop Health Assessment </h2>
+            <h3>(NDVI or other indexes by request)</h3>
             <p>Precise assesment, row by row, plant by plant.</p>
             <p>Detect stress caused by pests, irrigation issues, nutrition deficiencies.</p>
             <p>Identify and monitor movement of zonal boundaries</p>
